added repository logic for users
