# backend/docs/swagger.json
@@ -304,7 +304,7 @@
                 "summary": "user sign in",
                 "parameters": [
                     {
-                        "description": "auth params",
+                        "description": "log in params",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -350,7 +350,7 @@
                 "summary": "user sign out",
                 "parameters": [
                     {
-                        "description": "auth params",
+                        "description": "log out params",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -396,7 +396,7 @@
                 "summary": "user sign up",
                 "parameters": [
                     {
-                        "description": "auth params",
+                        "description": "create account params",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -446,13 +446,13 @@
         "handlers.DocumentItemResponse": {
             "type": "object",
             "properties": {
-                "Theme": {
-                    "type": "string"
-                },
                 "recipient_id": {
                     "type": "string"
                 },
                 "sender_id": {
+                    "type": "string"
+                },
+                "theme": {
                     "type": "string"
                 }
             }
@@ -499,7 +499,7 @@
         "handlers.UserResponse": {
             "type": "object",
             "properties": {
-                "email": {
+                "public_key": {
                     "type": "string"
                 },
                 "username": {
